2009-03-10  Akira TAGOH  <tagoh@redhat.com>

	* backends/xim/compose.c (compose_parse): Fix a double-free issue. (RHBZ#485595)

2009-03-09  Akira TAGOH  <tagoh@redhat.com>

	* backends/xim/proxy.c (xim_proxy_client_protocol_real_xim_set_ic_values_reply): 
	Fix a refcount inconsistency.

	Stop a debugging message. (RHBZ#489119)

	* utils/imsettings-start.c (main): Add -q option.

	* applet/main.c (_setup_acceleration_key): disable a debugging message.

	Workaround to not filtered out the key event with accelerator keys
	on some X apps. (RHBZ#488675)

	* applet/main.c (_gconf_sync_cb): new.
	(_preference_activated): reflect a value from gconf.

	* applet/imsettings-applet.schemas.in: Add a sync_on_forward key.

	* backends/xim/loopback.c (xim_loopback_real_set_property): new.
	(xim_loopback_real_get_property): new.
	(xim_loopback_real_xim_create_ic): change a event mask for
	XIM_SET_EVENT_MASK to allow a synchronous event of XIM_FORWARD_EVENT.

	* applet/main.c (_preference_sync_toggled): new.
	(_preference_activated): Add a option to enable/disable synchronous
	event on XIM_FORWARD_EVENT for loopback.

	* README: Add a description of IMSETTINGS_INTEGRATE_DESKTOP env.

	* utils/imsettings-start.c (main): Add --cond-start option.

	* utils/imsettings-start.desktop.in: New.

	* data/xinput.sh.in.in: Support execution-delay to integrate more
	to desktop.

2009-03-04  Akira TAGOH  <tagoh@redhat.com>

	* backends/xfce_xfconf/imsettings-xfce-helper.desktop.in:
	Remove Hidden tag.

2009-02-23  Akira TAGOH  <tagoh@redhat.com>

	* configure.ac: bump to 0.106.0

	* NEWS: update

	Fix a warning during parsing Compose data. (RHBZ#484142)
	
	* backends/xim/loopback.c (xim_loopback_real_xim_forward_event): send
	a key event with XLookupKeySym when no strings available.

	* backends/xim/compose.c (compose_parse): Fix not working in the case
	when the keysym or the string only is available at the right value.

2009-02-18  Akira TAGOH  <tagoh@redhat.com>
